fix long shadow overflow

--- a/src/css/includes/_typefaces.scss
+++ b/src/css/includes/_typefaces.scss
@@ -139,7 +139,7 @@ p {
 ul {
   list-style-type: circle;
   line-height: 1.3;
-  padding-left: 1rem;
+  padding-left: 1.25rem;
   margin-bottom: 1rem;
 }
 
